# ga-spgmt-uu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: test.ply
script/: cgal-install-windows.ps1  src-build-windows.ps1
src/: CMakeLists.txt  main.cpp
src/common/: BatchPointLocation.cpp  BatchPointLocation.h  BruteForce.cpp  BruteForce.h  DebugUtils.cpp  DebugUtils.h  Serialize.h  SmartLowerEnvelope.cpp  SmartLowerEnvelope.h  Types.h  Utils.cpp  Utils.h  Visualization.cpp  Visualization.h
src/ipelets/: find2dFaceIndex.cpp  simple_triangulation.cpp
src/main/: main.cpp
src/tests/: tests.cpp
